# mentor

./: .gitignore  README.md  project.md  pyproject.toml  rebuttal.md  reference.md
analysis/: ablation_experiments.py  multi_agent_eval.py  session_metrics.py
knowledge_store_llm/: chroma.sqlite3
paper/: README.md  references.bib  www26-crimementor.tex
src/agents/: __init__.py  analyst.py  base.py  forecaster.py  framework.py  heuristics.py  prompts.py  strategist.py
src/blackboard/: blackboard_template.md  board.py
src/common/: __init__.py  llm.py
src/data/: __init__.py  cleaner.py  fine_tuning_generator.py  llm_cleaner.py  narrative_generator.py  narrative_generator_demo.py
src/knowledge/: importer.py  retriever.py
src/runtime/: __init__.py  interactive.py  logger.py  report.py  session.py
src/tools/: tools_spec.py
src/visualization/: __init__.py  agents_catalog.py  dashboard.py  interactive_manager.py  tasks.py
src/visualization/static/: style.css
src/visualization/templates/: agents.html  index.html  interactive.html  session.html
tests/: conftest.py  test_agents.py  test_cleaner.py  test_llm.py  test_runtime.py  test_visualization.py
